# invisible-hand-hr-system

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  invisible-hand-hr-system.h  runtest.cpp  vcpkg.json
.cache/clangd/index/: invisible-hand-hr-system.cpp.7C946145629A2574.idx  invisible-hand-hr-system.h.C6B29EFA82AC517C.idx
code/client/: index.html  package-lock.json  package.json  vite.config.js
code/client/src/: App.vue  main.js
code/client/src/api/: index.js
code/client/src/router/: index.js
code/client/src/stores/: index.js
code/client/src/utils/: request.js
code/client/src/views/admin/: Announcement.vue  Dashboard.vue  Enterprises.vue  Feedback.vue  Jobs.vue  Settings.vue  User.vue
code/client/src/views/enterprise/: Applicants.vue  Dashboard.vue  EnterpriseResumeView.vue  JobForm.vue  JobList.vue  Profile.vue  Setting.vue  Settings.vue  TalentSearch.vue
code/client/src/views/jobs/: JobDetail.vue  JobList.vue
code/client/src/views/layouts/: AdminLayout.vue  EnterpriseLayout.vue  UserLayout.vue
code/client/src/views/public/: EnterpriseRegister.vue  Home.vue  Login.vue  Register.vue
code/client/src/views/user/: ApplicationList.vue  Dashboard.vue  Profile.vue  ResumeForm.vue  ResumeList.vue  ResumeView.vue  Settings.vue
code/server/: invisible-hand-hr-system.cpp
code/server/Config/: config.cpp  config.h
code/server/Main/: invisible-hand-hr-system.cpp  invisible-hand-hr-system.h  main.cpp
code/server/Middleware/: authMiddleware.cpp  authMiddleware.h  validationMiddleware.cpp  validationMiddleware.h
code/server/Model/: adminUser.h  announcement.h  authResult.h  enterpriseUser.h  feedback.h  individualUser.h  jobApplication.h  jobPosting.h  resume.h
code/server/Routers/: adminController.cpp  adminController.h  adminRouter.h  apiRouter.h  authController.cpp  authController.h  authRouter.cpp  authRouter.h  enterpriseController.cpp  enterpriseController.h  enterpriseUserRouter.cpp  feedbackController.cpp  feedbackController.h  jobController.cpp  jobController.h  jobRouter.cpp  jobRouter.h  resumeController.cpp  resumeController.h  userController.cpp  userController.h
code/server/Service/: adminService.cpp  adminService.h  announcementService.cpp  announcementService.h  applicationService.cpp  applicationService.h  authService.cpp  authService.h  enterpriseUserService.cpp  enterpriseUserService.h  feedbackService.cpp  feedbackService.h  individualUserService.cpp  individualUserService.h  jobPostingService.cpp  jobPostingService.h  jobSearchService.cpp  jobSearchService.h  resumeService.cpp  resumeService.h  talentSearchService.cpp  talentSearchService.h
code/server/Utils/: SecurityUtils.cpp  SecurityUtils.h  ValidationUtils.h  securityUtils.cpp  securityUtils.h  validationUtils.cpp  validationUtils.h
code/server/database/: DatabaseManager.h  adminUserDAO.cpp  adminUserDAO.h  announcementDAO.cpp  announcementDAO.h  databaseInit.sql  databaseManager.cpp  enterpriseUserDAO.cpp  enterpriseUserDAO.h  feedbackDAO.cpp  feedbackDAO.h  individualUserDAO.cpp  individualUserDAO.h  jobApplicationDAO.cpp  jobApplicationDAO.h  jobPostingDAO.cpp  jobPostingDAO.h  resumeDAO.cpp  resumeDAO.h
code/test/: runtest.cpp  test.bat
docs/: 后端类视图.mermaid  后端组件设计.md  未验证：软件系统设计SDD.md  软件系统设计SDD.md  软件需求规格说明书 (SRS).md
docs/client/: 前端架构设计.md
docs/server/: API接口文档.md  OpenAPI.yaml  后端代码规范.md  后端类视图.mermaid  后端组件设计.md  软件系统设计SDD.md  软件需求规格说明书 (SRS).md
making/: todolist_server.md
tasks/: todolist_server.md
